# ogls

./: .clang-format  .gitignore  CMakeLists.txt  README.md
headers/: Camera.hpp  Engine.hpp  Object.hpp  Scene.hpp  Shader.hpp  utils.hpp
headers/lab_scene/: LabScene.hpp
resource/shaders/: fragment.shade  simple_shader.frag  simple_shader.vert  textured_shader.frag  textured_shader.vert  vertex.shade
src/: Camera.cpp  Engine.cpp  Mesh.hpp  Object.cpp  Scene.cpp  Shader.cpp  main.cpp  utils.cpp
